<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationFragment">

    <TextView
        android:id="@+id/headerRegestrationTextView"
        android:layout_width="262dp"
        android:layout_height="58dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:fontFamily="monospace"
        android:text="@string/registration_string"

        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/headerRegestrationTextView"
        app:layout_constraintVertical_bias="0.763" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="266dp"
        android:layout_height="46dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name_editText"
        android:inputType="textPersonName"
        android:textColor="@color/colorHintText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerRegestrationTextView" />

    <EditText
        android:id="@+id/editTextFamily"
        android:layout_width="266dp"
        android:layout_height="44dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/family_editText"
        android:inputType="textPersonName"
        android:textColor="@color/colorHintText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/setDateButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="268dp"
        android:layout_height="45dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="92dp"
        android:text="@string/button_set_date_string"
        android:textColor="@color/colorHintText"
        app:iconTint="#4CAF50"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFamily" />

    <TextView
        android:id="@+id/dateOfBirth_TextView"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:textAlignment="center"

        android:hint="@string/hint_text_date"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/setDateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFamily"
         />

</androidx.constraintlayout.widget.ConstraintLayout>